--- a/tcn/ui/templates/ui/components/category.html
+++ b/tcn/ui/templates/ui/components/category.html
@@ -7,12 +7,10 @@
   <div class="card-body gap-4">
     <h2 class="card-title text-primary">{{ category.title }}</h2>
 
-    <p>{{ category.description|richtext }}</p>
-
     <div class="card-actions justify-end">
       <div
         class="tooltip tooltip-left tooltip-info tooltip-open rtl:tooltip-right"
-        data-tip="{% trans 'News articles' %}"
+        data-tip="{% trans 'Articles' %}"
       >
         <span
           class="badge badge-sm md:badge-md xl:badge-lg 2xl:badge-xl badge-info font-semibold"
