--- a/tcn/ui/templates/ui/categories/index.html
+++ b/tcn/ui/templates/ui/categories/index.html
@@ -7,6 +7,8 @@
 {% block content %}
 <div class="container mx-auto px-4 py-20">
   <section class="grid gap-8">
+    {% include 'ui/components/breadcrumbs.html' %}
+  
     <div
       class="hero bg-gradient-to-r from-emerald-500 to-sky-400 rounded-box md:aspect-video"
     >
