update article details page

--- a/tcn/ui/templates/ui/articles/id.html
+++ b/tcn/ui/templates/ui/articles/id.html
@@ -225,7 +225,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col md:flex-row text-xs sm:text-sm items-center gap-4">
+    <div class="flex flex-col md:flex-row text-xs sm:text-sm md:items-center gap-4">
       <div
         class="tooltip tooltip-bottom tooltip-primary"
         data-tip="{% trans 'Date published' %}"
