--- a/tcn/ui/templates/rest_framework/api.html
+++ b/tcn/ui/templates/rest_framework/api.html
@@ -4,18 +4,11 @@
 {% block title %}{% trans 'The Certain News' %} | API | {{ name }}{% endblock %}
 
 <!---->
-{% block highlight_theme %}
+{% block highlight_theme %}{{ block.super }}
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"
 />
-<link rel="stylesheet" href="{% static 'rest_wind/css/pygments.css' %}" />
-{% endblock %}
-
-<!---->
-{% block styles %}
-<link rel="stylesheet" href="{% static 'ui/css/styles.css' %}" />
-<link rel="stylesheet" href="{% static 'rest_wind/css/styles.css' %}" />
 {% endblock %}
 
 <!---->
@@ -27,7 +20,7 @@
 <!---->
 {% block branding %}
 <div
-  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
+  class="tooltip tooltip-right tooltip-primary"
   data-tip="{% trans 'The Certain News | API' %}"
 >
   <h1 class="relative">
@@ -35,14 +28,7 @@
       href="/{{ LANGUAGE_CODE }}/api/"
       class="btn btn-square btn-primary lg:btn-lg"
     >
-      <div
-        class="bg-primary rounded-field text-primary-content absolute inset-0 size-full flex rotate-45 items-center justify-center"
-      >
-        <i
-          data-lucide="scroll-text"
-          class="-rotate-45 lg:size-8 2xl:size-10"
-        ></i>
-      </div>
+      <i data-lucide="scroll-text"></i>
       <span class="sr-only"> {% trans 'The Certain News | API' %} </span>
     </a>
   </h1>
@@ -57,30 +43,51 @@
 <!---->
 {% block userlinks %}
 <li
-  class="tooltip tooltip-right rtl:tooltip-left tooltip-secondary"
+  class="tooltip tooltip-right tooltip-primary"
   data-tip="{% trans 'Home' %}"
 >
-  <a href="/" class="btn btn-sm btn-square btn-ghost lg:btn-md">
-    <i data-lucide="house" class="size-4 lg:size-6"></i>
+  <a
+    href="/{{ LANGUAGE_CODE }}/api/"
+    class="btn btn-square btn-soft btn-primary"
+  >
+    <i data-lucide="home"></i>
     <span class="sr-only">{% trans 'Home' %}</span>
   </a>
 </li>
 <li
-  class="tooltip tooltip-right rtl:tooltip-left tooltip-secondary"
-  data-tip="{% trans 'Categories' %}"
+  class="tooltip tooltip-right tooltip-primary"
+  data-tip="{% trans 'Pages' %}"
 >
-  <a href="/api/categories" class="btn btn-sm btn-square btn-ghost lg:btn-md">
-    <i data-lucide="library" class="size-4 lg:size-6"></i>
-    <span class="sr-only">{% trans 'Categories' %}</span>
+  <a
+    href="/{{ LANGUAGE_CODE }}/api/pages/"
+    class="btn btn-square btn-soft btn-primary"
+  >
+    <i data-lucide="file-text"></i>
+    <span class="sr-only">{% trans 'Pages' %}</span>
   </a>
 </li>
 <li
-  class="tooltip tooltip-right rtl:tooltip-left tooltip-secondary"
-  data-tip="{% trans 'Articles' %}"
+  class="tooltip tooltip-right tooltip-primary"
+  data-tip="{% trans 'Images' %}"
 >
-  <a href="/api/articles" class="btn btn-sm btn-square btn-ghost lg:btn-md">
-    <i data-lucide="route" class="size-4 lg:size-6"></i>
-    <span class="sr-only">{% trans 'Articles' %}</span>
+  <a
+    href="/{{ LANGUAGE_CODE }}/api/images/"
+    class="btn btn-square btn-soft btn-primary"
+  >
+    <i data-lucide="images"></i>
+    <span class="sr-only">{% trans 'Images' %}</span>
+  </a>
+</li>
+<li
+  class="tooltip tooltip-right tooltip-primary"
+  data-tip="{% trans 'Documents' %}"
+>
+  <a
+    href="/{{ LANGUAGE_CODE }}/api/documents/"
+    class="btn btn-square btn-soft btn-primary"
+  >
+    <i data-lucide="file-badge"></i>
+    <span class="sr-only">{% trans 'Documents' %}</span>
   </a>
 </li>
 {% endblock %}
@@ -90,7 +97,7 @@
 <!---->
 {% if request.user.is_authenticated %}
 <li>
-  <a href="/api/users/me" class="flex items-center gap-4">
+  <a href="/{{ LANGUAGE_CODE }}/api/users/me" class="flex items-center gap-4">
     <i data-lucide="circle-user" class="size-4 lg:size-6"></i>
 
     <span>{% trans 'Profile' %}</span>
