--- a/tcn/ui/templates/ui/blog/post.html
+++ b/tcn/ui/templates/ui/blog/post.html
@@ -21,7 +21,7 @@
   property="og:description"
   content="{% trans 'The Certain News' %} | {% trans 'Blog' %} | {{ post.title }}"
 />
-<meta property="og:image" content="{% image_url post.image fill-1920x1080 %}" />
+<meta property="og:image" content="{% image_url post.image 'fill-1920x1080' %}" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
@@ -36,7 +36,7 @@
   name="twitter:description"
   content="{% trans 'The Certain News' %} | {% trans 'Blog' %} | {{ post.title }}"
 />
-<meta name="twitter:image" content="{% image_url post.image fill-1920x1080 %}" />
+<meta name="twitter:image" content="{% image_url post.image 'fill-1920x1080' %}" />
 {% endblock %}
 
 <div class="hidden badge-secondary badge-error"></div>
