add light theme

--- a/tcn/ui/templates/registration/base.html
+++ b/tcn/ui/templates/registration/base.html
@@ -188,7 +188,7 @@
     ></label>
 
     <section
-      class="bg-base-100/50 flex size-full flex-col justify-between overflow-hidden overflow-y-auto backdrop-blur-3xl sm:w-10/12 md:w-8/12 lg:w-full lg:bg-base-200"
+      class="bg-base-100/75 dark:bg-base-100/50 flex size-full flex-col justify-between overflow-hidden overflow-y-auto backdrop-blur-3xl sm:w-10/12 md:w-8/12 lg:w-full lg:bg-base-200"
     >
       <header class="flex items-center justify-between gap-4 p-4">
         <div
