--- a/tcn/ui/templates/ui/articles/id.html
+++ b/tcn/ui/templates/ui/articles/id.html
@@ -168,7 +168,7 @@
             id="translations"
             popover
             style="position-anchor: --translations"
-            class="menu dropdown dropdown-left rounded-box bg-base-100/50 backdrop-blur-3xl text-base-content shadow-sm rtl:dropdown-right"
+            class="menu dropdown dropdown-left rounded-box bg-base-100/75 dark:bg-base-100/50 backdrop-blur-3xl text-base-content shadow-sm rtl:dropdown-right"
           >
             <li class="menu-title">{% translate 'Available in' %}</li>
 
