--- a/tcn/ui/templates/ui/base.html
+++ b/tcn/ui/templates/ui/base.html
@@ -243,7 +243,7 @@
                       id="language"
                       popover
                       style="position-anchor: --language"
-                      class="menu dropdown dropdown-top dropdown-right rounded-box bg-base-100/50 backdrop-blur-3xl text-base-content shadow-sm rtl:dropdown-left rtl:dropdown-top"
+                      class="menu dropdown dropdown-top dropdown-right rounded-box bg-base-100/75 dark:bg-base-100/50 backdrop-blur-3xl text-base-content shadow-sm rtl:dropdown-left rtl:dropdown-top"
                     >
                       <li class="menu-title">{% translate 'Language' %}</li>
                       <form
@@ -699,7 +699,7 @@
         ></label>
 
         <section
-          class="bg-base-100/50 flex size-full flex-col justify-between overflow-hidden overflow-y-auto backdrop-blur-3xl sm:w-10/12 md:w-8/12 lg:w-1/3 2xl:w-1/4"
+          class="bg-base-100/75 dark:bg-base-100/50 flex size-full flex-col justify-between overflow-hidden overflow-y-auto backdrop-blur-3xl sm:w-10/12 md:w-8/12 lg:w-1/3 2xl:w-1/4"
         >
           <div class="grid">
             <header class="flex items-center justify-between gap-4 p-4">
