--- a/tcn/ui/templates/ui/index.html
+++ b/tcn/ui/templates/ui/index.html
@@ -25,6 +25,22 @@
   </ol>
 
   <section class="grid gap-8">
+    {% if trending_news %}
+    <h1 class="text-3xl text-primary font-black lg:text-5xl">
+      {% trans 'Trending now' %}
+    </h1>
+
+    <ol class="grid grid-cols-12 grid-rows-[auto] gap-4">
+      {% for article in trending_news %}
+      <!---->
+      {% include 'ui/components/article.html' %}
+      <!---->
+      {% endfor %}
+    </ol>
+    {% endif %}
+  </section>
+
+  <section class="grid gap-8">
     {% if latest_news %}
     <h1 class="text-3xl text-primary font-black lg:text-5xl">
       {% trans 'Latest News' %}
