--- a/tcn/ui/templates/ui/components/article.html
+++ b/tcn/ui/templates/ui/components/article.html
@@ -2,10 +2,10 @@
 
 <li
   role="article"
-  class="group col-span-12 row-span-12 md:col-span-6 md:row-span-3 first:md:col-span-6 first:md:row-span-6 lg:col-span-3"
+  class="group col-span-12 row-span-12 md:col-span-6 md:row-span-3 first:md:col-span-6 first:md:row-span-6 lg:col-span-4 xl:col-span-3"
 >
   <div
-    class="card relative bg-base-300 hover:bg-base-200 card-side card-sm md:card-md xl:card-lg 2xl:card-xl size-full shadow-sm group-first:flex-col lg:flex-col"
+    class="card border border-base-300 overflow-hidden image-full relative bg-base-300 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl size-full shadow-sm group-first:flex-col lg:flex-col"
   >
     <a
       href="{% url 'ui:redirect' article.link.slug %}"
@@ -14,31 +14,16 @@
       <span class="sr-only">{% trans 'Read' %}</span>
     </a>
 
-    <figure class="skeleton overflow-clip max-w-1/2 group-first:max-w-full lg:max-w-full">
+    <figure class="skeleton overflow-clip">
       {% image article.image fill-1920x1080 %}
     </figure>
-    <div class="card-body justify-end">
-      <h2 class="card-title text-primary">{{ article.title }}</h2>
-      {% if article.country %}
-      <div>
-        <div
-          class="tooltip tooltip-success"
-          data-tip="{{ article.country.name }}"
-        >
-          <a
-            href="{% url 'ui:articles' %}?country={{ article.country }}"
-            class="badge badge-success badge-sm md:badge-md xl:badge-lg 2xl:badge-xl"
-          >
-            <i data-lucide="map-pin" class="size-4 lg:size-6"></i>
-            {{ article.country }}
-          </a>
-        </div>
-      </div>
-      {% endif %}
+
+    <div class="card-body p-4 justify-end bg-gradient-to-t from-base-100 to-transparent to-75%">
+      <h2 class="card-title">{{ article.title }}</h2>
 
       <p class="hidden grow-0 group-first:block">{{ article.headline }}</p>
 
-      <div class="card-actions items-center gap-2">
+      <div class="card-actions items-center gap-1">
         {% if article.is_breaking %}
         <div
           class="tooltip flex tooltip-error"
@@ -52,23 +37,36 @@
         </div>
         {% endif %}
         <a
+          class="tooltip tooltip-primary"
+          data-tip="{% trans 'Date published' %}"
+          href="{% url 'ui:articles-d' article.created_at.year article.created_at.month article.created_at.day %}"
+        >
+          <span class="badge badge-soft badge-xs md:badge-sm badge-primary">
+            {{ article.created_at|date:'Y/m/d' }}
+          </span>
+        </a>
+        {% if article.country %}
+        <div
+          class="tooltip tooltip-success"
+          data-tip="{{ article.country.name }}"
+        >
+          <a
+            href="{% url 'ui:articles' %}?country={{ article.country }}"
+            class="badge badge-success badge-xs md:badge-sm"
+          >
+            {{ article.country }}
+          </a>
+        </div>
+        {% endif %}
+        <a
           href="{% pageurl article.get_parent %}"
           class="tooltip tooltip-primary"
           data-tip="{% trans 'Category' %}"
         >
           <span
-            class="badge badge-sm md:badge-md xl:badge-lg 2xl:badge-xl badge-primary font-semibold"
+            class="badge badge-sm badge-xs md:badge-sm badge-primary"
           >
             {{ article.get_parent.title }}
-          </span>
-        </a>
-        <a
-          class="tooltip tooltip-primary"
-          data-tip="{% trans 'Date published' %}"
-          href="{% url 'ui:articles-d' article.created_at.year article.created_at.month article.created_at.day %}"
-        >
-          <span class="badge badge-soft badge-sm md:badge-md badge-primary">
-            {{ article.created_at|date }}
           </span>
         </a>
       </div>
