--- a/tcn/ui/templates/ui/index.html
+++ b/tcn/ui/templates/ui/index.html
@@ -6,23 +6,26 @@
   figure > img {
     height: 100%;
     width: 100%;
+    filter: brightness(100%);
   }
 </style>
 {% endblock %}
 
 <!---->
 {% block content %}
-<div class="container grid gap-12 mx-auto px-4 py-20">
-  <ol
-    title="{% trans 'Breaking' %}"
-    class="grid grid-cols-12 grid-rows-[auto] gap-4"
-  >
-    {% for article in breaking_news %}
-    <!---->
-    {% include 'ui/components/article-1.html' %}
-    <!---->
-    {% endfor %}
-  </ol>
+<div class="container grid gap-16 mx-auto px-4 py-20">
+  <section title="{% trans 'Breaking' %}">
+    <ol
+      title="{% trans 'Breaking' %}"
+      class="grid grid-cols-12 grid-rows-[auto] gap-4"
+    >
+      {% for article in breaking_news %}
+      <!---->
+      {% include 'ui/components/article-1.html' %}
+      <!---->
+      {% endfor %}
+    </ol>
+  </section>
 
   <section class="grid gap-8">
     {% if trending_news %}
