add depth to titles

--- a/tcn/ui/templates/ui/components/article.html
+++ b/tcn/ui/templates/ui/components/article.html
@@ -19,9 +19,13 @@
     </figure>
 
     <div class="card-body p-4 justify-end bg-gradient-to-t from-base-100 to-transparent to-75%">
-      <h2 class="card-title">{{ article.title }}</h2>
+      <h2 class="card-title text-primary-content text-shadow-lg dark:text-primary">
+        {{ article.title }}
+      </h2>
 
-      <p class="hidden grow-0 group-first:block">{{ article.headline }}</p>
+      <p class="hidden grow-0 text-primary-content text-shadow-lg dark:text-primary group-first:block">
+        {{ article.headline }}
+      </p>
 
       <div class="card-actions items-center gap-1">
         {% if article.is_breaking %}
