update article card

--- a/tcn/ui/templates/ui/components/article.html
+++ b/tcn/ui/templates/ui/components/article.html
@@ -9,7 +9,7 @@
   >
     <a
       href="{% url 'ui:redirect' article.link.slug %}"
-      class="absolute inset-0"
+      class="absolute inset-0 z-10"
     >
       <span class="sr-only">{% trans 'Read' %}</span>
     </a>
