--- a/tcn/ui/templates/ui/base.html
+++ b/tcn/ui/templates/ui/base.html
@@ -64,6 +64,13 @@
       rel="stylesheet"
       type="text/css"
     />
+    <style>
+      figure > img {
+        height: 100%;
+        width: 100%;
+        filter: brightness(100%);
+      }
+    </style>
     {% endblock %}
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
