--- a/tcn/ui/templates/ui/index.html
+++ b/tcn/ui/templates/ui/index.html
@@ -1,15 +1,7 @@
 {% extends 'ui/base.html' %}{% load i18n wagtailcore_tags wagtailimages_tags %}
 
 <!---->
-{% block styles %}{{ block.super }}
-<style>
-  figure > img {
-    height: 100%;
-    width: 100%;
-    filter: brightness(100%);
-  }
-</style>
-{% endblock %}
+{% block title %}{{ block.super }} | {% trans 'Latest news around the world' %}{% endblock %}
 
 <!---->
 {% block content %}
