update article card and serachbar

--- a/tcn/ui/templates/ui/base.html
+++ b/tcn/ui/templates/ui/base.html
@@ -502,7 +502,7 @@
                         class="hidden lg:block"
                       >
                         <label
-                          class="mx-auto max-w-xl w-full bg-transparent input input-primary xl:input-lg 2xl:input-xl"
+                          class="mx-auto max-w-xl w-full bg-transparent input input-primary 2xl:input-lg"
                         >
                           <i
                             data-lucide="search"
