--- a/tcn/ui/templates/ui/categories/id.html
+++ b/tcn/ui/templates/ui/categories/id.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags wagtailimages_tags %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{{ block.super }} | {{ category.title }}{% endblock %}
