--- a/tcn/ui/templates/ui/index.html
+++ b/tcn/ui/templates/ui/index.html
@@ -1,7 +1,8 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags wagtailimages_tags %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
-{% block title %}{{ block.super }} | {% trans 'Latest news around the world' %}{% endblock %}
+{% block title %}{{ block.super }} | 
+{% trans 'Latest news around the world' %}{% endblock %}
 
 <!---->
 {% block content %}
