--- a/tcn/ui/templates/registration/profile.html
+++ b/tcn/ui/templates/registration/profile.html
@@ -1,4 +1,4 @@
-{% extends 'registration/base.html' %}{% load i18n wagtailimages_tags %}
+{% extends 'registration/base.html' %}{% load i18n %}
 
 <!---->
 {% block main_content %}
