--- a/tcn/ui/templates/ui/about.html
+++ b/tcn/ui/templates/ui/about.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailimages_tags %}
+{% extends 'ui/base.html' %}{% load i18n %}
 
 <!---->
 {% block title %}{{ block.super }} | {{ about.title }}{% endblock %}
