--- a/tcn/ui/templates/ui/articles/archive/month.html
+++ b/tcn/ui/templates/ui/articles/archive/month.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags wagtailimages_tags %}
+{% extends 'ui/base.html' %}{% load i18n %}
 
 <!---->
 {% block title %}{{ block.super }} | {{ month|date:"F Y" }}{% endblock %}
