--- a/tcn/ui/templates/ui/articles/list.html
+++ b/tcn/ui/templates/ui/articles/list.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags wagtailimages_tags %}
+{% extends 'ui/base.html' %}{% load i18n %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Latest News' %}{% endblock %}
@@ -75,7 +75,8 @@
     </header>
 
     <main>
-      {% include 'ui/components/form.html' with method='get' csrf=False form=filter.form %}
+      {% include 'ui/components/form.html' with method='get' csrf=False
+      form=filter.form %}
     </main>
 
     <footer class="-mx-5 -mb-5 grid">
