--- a/tcn/ui/templates/ui/base.html
+++ b/tcn/ui/templates/ui/base.html
@@ -1,4 +1,4 @@
-{% load i18n static tcn wagtailcore_tags wagtailimages_tags wagtailuserbar %}
+{% load i18n static tcn wagtailcore_tags wagtailuserbar %}
 <!DOCTYPE html>
 <html
   lang="{{ LANGUAGE_CODE }}"
