--- a/tcn/ui/templates/ui/categories/index.html
+++ b/tcn/ui/templates/ui/categories/index.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags wagtailimages_tags %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{{ block.super }} | {{ index.title }}{% endblock %}
@@ -8,7 +8,7 @@
 <div class="container mx-auto px-4 py-20">
   <section class="grid gap-8">
     {% include 'ui/components/breadcrumbs.html' %}
-  
+
     <div
       class="hero bg-gradient-to-r from-emerald-500 to-sky-400 rounded-box md:aspect-video"
     >
