--- a/tcn/ui/templates/ui/components/article-1.html
+++ b/tcn/ui/templates/ui/components/article-1.html
@@ -8,21 +8,20 @@
     <span class="sr-only">{% trans 'Read' %}</span>
   </a>
 
-  <figure class="skeleton overflow-clip w-full min-w-1/2 max-w-1/2 group-first:max-w-full">
+  <figure
+    class="skeleton overflow-clip w-full min-w-1/2 max-w-1/2 group-first:max-w-full"
+  >
     {% image article.image fill-1920x1080 %}
   </figure>
 
   <div class="card-body p-4 justify-end">
     <h2 class="card-title text-primary">{{ article.title }}</h2>
-    
+
     <p class="hidden grow-0 group-first:block">{{ article.headline }}</p>
 
     <div class="card-actions items-center gap-1">
       {% if article.is_breaking %}
-      <div
-        class="tooltip flex tooltip-error"
-        data-tip="{% trans 'Breaking' %}"
-      >
+      <div class="tooltip flex tooltip-error" data-tip="{% trans 'Breaking' %}">
         <div class="inline-grid *:[grid-area:1/1]">
           <span class="sr-only">{% trans 'Breaking' %}</span>
           <div class="status status-xl status-error animate-ping"></div>
@@ -57,9 +56,7 @@
         class="tooltip tooltip-primary"
         data-tip="{% trans 'Category' %}"
       >
-        <span
-          class="badge badge-sm badge-xs md:badge-sm badge-primary"
-        >
+        <span class="badge badge-xs md:badge-sm badge-primary">
           {{ article.get_parent.title }}
         </span>
       </a>
