--- a/tcn/ui/templates/ui/articles/id.html
+++ b/tcn/ui/templates/ui/articles/id.html
@@ -4,12 +4,8 @@
 {% load i18n tcn wagtailcore_tags wagtailimages_tags %}
 
 <!---->
-{% block title %}
-{{ block.super }} | {{ article.get_parent }} | {{ article }}
+{% block title %} {{ block.super }} | {{ article.get_parent }} | {{ article }}
 {% endblock %}
-
-<!---->
-{% short_link article.link.slug as link %}
 
 <!---->
 {% block meta %}
@@ -17,7 +13,7 @@
   name="description"
   content="{% trans 'The Certain News' %} | {% trans 'News' %} | {{ article.title }}"
 />
-<meta property="og:url" content="{{ link }}" />
+<meta property="og:url" content="{% short_link article.link.slug %}" />
 <meta property="og:type" content="website" />
 <meta
   property="og:title"
@@ -27,13 +23,16 @@
   property="og:description"
   content="{% trans 'The Certain News' %} | {% trans 'News' %} | {{ article.title }}"
 />
-<meta property="og:image" content="{% image_url article.image 'fill-1920x1080' %}" />
+<meta
+  property="og:image"
+  content="{% image_url article.image 'fill-1920x1080' %}"
+/>
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:domain" content="{{ link }}" />
-<meta property="twitter:url" content="{{ link }}" />
+<meta property="twitter:domain" content="{% short_link article.link.slug %}" />
+<meta property="twitter:url" content="{% short_link article.link.slug %}" />
 <meta
   name="twitter:title"
   content="{% trans 'The Certain News' %} | {% trans 'News' %} | {{ article.title }}"
@@ -42,7 +41,10 @@
   name="twitter:description"
   content="{% trans 'The Certain News' %} | {% trans 'News' %} | {{ article.title }}"
 />
-<meta name="twitter:image" content="{% image_url article.image 'fill-1920x1080' %}" />
+<meta
+  name="twitter:image"
+  content="{% image_url article.image 'fill-1920x1080' %}"
+/>
 {% endblock %}
 
 <!---->
@@ -101,7 +103,7 @@
   </div>
 
   <h1
-    class="font-bold text-primary text-xl md:text-3xl lg:text-6xl/24 xl:txet-7xl/32 2xl:text-8xl/36"
+    class="font-bold text-primary text-xl md:text-3xl lg:text-5xl/24 xl:text-6xl/32 2xl:text-7xl/36"
   >
     {{ article.title }}
   </h1>
@@ -195,7 +197,7 @@
         >
           <button
             class="btn btn-copy btn-square btn-sm btn-primary md:btn-md 2xl:btn-lg"
-            data-clipboard-text="{{ link }}"
+            data-clipboard-text="{% short_link article.link.slug %}"
           >
             <i
               id="clipboard"
@@ -217,7 +219,7 @@
         >
           <a
             class="btn btn-copy btn-square btn-sm btn-info md:btn-md 2xl:btn-lg"
-            href="https://www.facebook.com/sharer/sharer.php?u={{ link }}"
+            href="https://www.facebook.com/sharer/sharer.php?u={% short_link article.link.slug %}"
           >
             <i data-lucide="facebook" class="size-4 md:size-6"></i>
             <span class="sr-only">{% trans 'Facebook' %}</span>
@@ -226,7 +228,9 @@
       </div>
     </div>
 
-    <div class="flex flex-col md:flex-row text-xs sm:text-sm md:items-center gap-4">
+    <div
+      class="flex flex-col md:flex-row text-xs sm:text-sm md:items-center gap-4"
+    >
       <div
         class="tooltip tooltip-bottom tooltip-primary"
         data-tip="{% trans 'Date published' %}"
@@ -271,8 +275,8 @@
   {% if recommendations %}
   <section class="grid gap-8">
     <h1 class="font-bold text-primary text-xl md:text-3xl lg:text-4xl">
-      {% blocktrans trimmed %}More news from{% endblocktrans %}
-      {{ article.get_parent.title }}
+      {% blocktrans trimmed %}More news from{% endblocktrans %} {{
+      article.get_parent.title }}
     </h1>
 
     <ol class="grid grid-cols-12 grid-rows-[auto] gap-4">
