--- a/tcn/ui/templates/ui/components/pagination.html
+++ b/tcn/ui/templates/ui/components/pagination.html
@@ -31,7 +31,7 @@
     data-tip="{% translate 'Current' %}"
   >
     <button class="btn join-item btn-success">
-      {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+      {{ page_obj.number }} {% trans 'of' %} {{ page_obj.paginator.num_pages }}
     </button>
   </li>
 
