--- a/tcn/ui/templates/ui/articles/list.html
+++ b/tcn/ui/templates/ui/articles/list.html
@@ -75,8 +75,7 @@
     </header>
 
     <main>
-      {% include 'ui/components/form.html' with method='get' csrf=False
-      form=filter.form %}
+      {% include 'ui/components/form.html' with method='get' csrf=False form=filter.form %}
     </main>
 
     <footer class="-mx-5 -mb-5 grid">
