--- a/tcn/ui/templates/ui/articles/id.html
+++ b/tcn/ui/templates/ui/articles/id.html
@@ -275,8 +275,9 @@
   {% if recommendations %}
   <section class="grid gap-8">
     <h1 class="font-bold text-primary text-xl md:text-3xl lg:text-4xl">
-      {% blocktrans trimmed %}More news from{% endblocktrans %} {{
-      article.get_parent.title }}
+      {% blocktrans trimmed %}More news from{% endblocktrans %}
+      <!---->
+      {{ article.get_parent.title }}
     </h1>
 
     <ol class="grid grid-cols-12 grid-rows-[auto] gap-4">
