--- a/tcn/ui/templates/registration/base.html
+++ b/tcn/ui/templates/registration/base.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load i18n tcn %}
+{% extends 'ui/base.html' %}{% load i18n wagtailcore_tags %}
 
 <!---->
 {% block title %}{% trans 'Profile' %}{% endblock %}
@@ -42,7 +42,7 @@
               >
                 <h1 class="relative">
                   <a
-                    href="{% page_url home LANGUAGE_CODE %}"
+                    href="{% pageurl home %}"
                     class="btn btn-square btn-primary lg:btn-lg"
                   >
                     <div
@@ -236,24 +236,6 @@
               <span>{% trans 'Profile' %}</span>
             </a>
           </li>
-          {% if request.user.is_staff %}
-          <li>
-            <a
-              href="{% url 'wagtailadmin_home' %}"
-              class="btn btn-ghost btn-primary justify-between gap-4 w-full"
-            >
-              <span class="flex items-center gap-4">
-                <i data-lucide="layout-dashboard" class="size-4 lg:size-6"></i>
-                {% trans 'Dashboard' %}
-              </span>
-
-              <i
-                data-lucide="chevron-right"
-                class="size-4 lg:size-6 rtl:rotate-180"
-              ></i>
-            </a>
-          </li>
-          {% endif %}
           <li>
             <a
               href="{% url 'ui:u-user' request.user.slug %}"
